# agente-inteligencia

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  RELEASE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  especificacao_funcional_AI.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
alembic/: env.py
app/: llm_routing.py  main.py
build_docs/: .gitignore  generate_design_pattern.js  package.json
data/: agente_inteligencia.db
docs/: HANDOFF_NEXT_SESSION.md  backlog-playground.md  backlog-teste-e2e.md  configuracoes-plataforma.md  design_pattern_SKILL_Sovereign_Agent_Mesh.docx  invoke-async-runbook.md  security-audit-2026-07-01.md  testes-e2e-plano-cenarios.md  testes-e2e.md  troubleshooting.md
infra/: README.md
logs/: .gitkeep
scripts/: latency_bench.py  seed_argtest.py  seed_e2e_user.py
tests/: conftest.py  test_agent_diagnostics.py  test_agent_explain.py  test_agent_form_default_edge_and_attachment_expr.py  test_agent_form_else_and_drift.py  test_agent_form_empower_skill.py  test_agent_form_mentor.py  test_agent_form_mission_composer.py  test_agent_form_mission_mesh_sync.py  test_agent_form_scaffold_by_layer.py  test_agent_kind_cards.py  test_agent_kind_colors.py  test_agent_kind_labels.py  test_agents_invocation_detail_tz.py  test_agents_last_activity.py  test_agents_list_enrichment.py  test_agents_stats.py  test_alembic_env_logging_guard.py  test_alembic_setup.py  test_analytics_tasks.py  test_api_connectors_crypto.py  test_api_connectors_routes.py  (+377 more)
(+267 files in other folders)
